<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ProfileFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.ProfileActivity">

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="Profile"
                android:textSize="24sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/label"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profileNameCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileImage"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:elevation="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="16dp"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="Priyanka Parmar"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/shareButtonLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileNameCard"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="25dp"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/shareButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/share"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="25dp"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/contactUsButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/aboutUsButtonCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shareButtonLL"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:elevation="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="16dp"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/aboutUsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:text="@string/about_us"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutUsButtonCard"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:text="@string/logout" />
        </RelativeLayout>

    </FrameLayout>
</layout>